--- a/webapp/candidatesearch/templates/candidatesearchresults.html
+++ b/webapp/candidatesearch/templates/candidatesearchresults.html
@@ -1,3 +1,35 @@
-<div>
-	<my-skillcard></my-skillcard>
-</div>
+	<div>
+		<my-skillcard flex-xs="100" flex-gt-xs="100">
+			<md-menu>
+				<md-button aria-label="open" class="md-icon-button" ng-click=openMenu($mdOpenMenu,$event)>
+					<md-icon class="material-icons">more horiz</md-icon>
+				</md-button>
+				<md-menu-content width="4"></menu-content>
+					<md-menu-item>
+						<md-button>
+							View profile
+						</md-button>
+					</md-menu-item>
+
+					<md-menu-item>
+						<md-button>
+							Verify profile
+						</md-button>
+					</md-menu-item>
+
+					<md-menu-item>
+						<md-button>
+							Show  Similar profiles
+						</md-button>
+					</md-menu-item>
+
+					<md-menu-item>
+						<md-button>
+							Add to Circles
+						</md-button>
+					</md-menu-item>
+
+				</md-menu-content>
+			</md-menu>
+		</my-skillcard>
+	</div>
