--- a/webapp/candidatesearch/templates/candidatesearchresults.html
+++ b/webapp/candidatesearch/templates/candidatesearchresults.html
@@ -1,5 +1,5 @@
 	<div>
-		<my-skillcard flex-xs="100" flex-gt-xs="100">
+		<my-skillcard data=results flex-xs="100" flex-gt-xs="100">
 			<md-menu>
 				<md-button aria-label="open" class="md-icon-button" ng-click=openMenu($mdOpenMenu,$event)>
 					<md-icon class="material-icons">more horiz</md-icon>
