minor change and rubric use

--- a/webapp/candidatesearch/templates/candidateregistration.html
+++ b/webapp/candidatesearch/templates/candidateregistration.html
@@ -1,42 +1,37 @@
 <div>
-	<md-content>
-		<form name="registrationform" layout="column" layout-align="center center">
-			<md-input-container md-block>
-				<md-icon class="material-icons">phone</md-icon>
-				<label>Mobile</label>
-				<input name="phone" required ng-model="user.phone" ng-pattern="/^[(][0-9]{3}[)] [0-9]{3}-[0-9]{4}$/" />
-				<div ng-messages="registrationform.phone.$error">
-					<div ng-message="pattern">Please enter a valid phone number.</div>
-					<div ng-message="required">Please provide a  phone number</div>
-				</div> 
-			</md-input-container>
-
-			<md-input-container>
-				<md-icon class="material-icons"> account</md-icon>
-				<label>Name</label>
-				<input md-maxlength="4" type="text" name="name" required ng-model="name">
-
-				<div ng-messages="registrationform.name.$error">
-					<div ng-message="required">Plese provide username </div>
-					<div ng-message="md-maxlength">Plese provide username </div>
-				</div>
-			</md-input-container>
-
-			<md-input-container>
-				<md-icon class="material-icons"> email</md-icon>
-
-				<label>Email</label>
-				<input type="text" name="email" ng-model="email" required>
-				<div ng-messages="registrationform.email.$error">
-					<div  ng-message="required">Please provide a email ID</div>
-				</div>	
-			</md-input-container>
-
-			<md-input-container>
-				<md-icon class="material-icons"> place</md-icon>
-				<label>Location</label>
-				<input type="text" name="location">
-			</md-input-container>
-		</form>
-	</md-content>
+    <md-content>
+        <form name="registrationform" layout="column" layout-align="center center">
+            <md-input-container md-block>
+                <md-icon class="material-icons">phone</md-icon>
+                <label>Mobile</label>
+                <input name="phone" required ng-model="user.phone" ng-pattern="/^[(][0-9]{3}[)] [0-9]{3}-[0-9]{4}$/" />
+                <div ng-messages="registrationform.phone.$error">
+                    <div ng-message="pattern">Please enter a valid phone number.</div>
+                    <div ng-message="required">Please provide a phone number</div>
+                </div>
+            </md-input-container>
+            <md-input-container>
+                <md-icon class="material-icons"> account</md-icon>
+                <label>Name</label>
+                <input md-maxlength="4" type="text" name="name" required ng-model="name">
+                <div ng-messages="registrationform.name.$error">
+                    <div ng-message="required">Please provide username </div>
+                    <div ng-message="md-maxlength">Please provide username </div>
+                </div>
+            </md-input-container>
+            <md-input-container>
+                <md-icon class="material-icons"> email</md-icon>
+                <label>Email</label>
+                <input type="text" name="email" ng-model="email" required>
+                <div ng-messages="registrationform.email.$error">
+                    <div ng-message="required">Please provide a email ID</div>
+                </div>
+            </md-input-container>
+            <md-input-container>
+                <md-icon class="material-icons"> place</md-icon>
+                <label>Location</label>
+                <input type="text" name="location">
+            </md-input-container>
+        </form>
+    </md-content>
 </div>
