--- a/webapp/candidatesearch/templates/candidatesearchhome.html
+++ b/webapp/candidatesearch/templates/candidatesearchhome.html
@@ -2,7 +2,7 @@
 	<md-input-container>
 		<input type="text" name="searchBox" class="md-block">
 	</md-input-container>
-	<md-button class="md-raised" ui-sref="candidatessearch.results">search</md-button>
+	<md-button class="md-raised" ui-sref="candidatessearch.results" ng-click="search()">search</md-button>
 </div>
 <div>
 	<div ui-view="results"></div>
