--- a/webapp/candidatesearch/templates/candidatesearchresults.html
+++ b/webapp/candidatesearch/templates/candidatesearchresults.html
@@ -1,6 +1,6 @@
-<div>
+<div ng-repeat="x in results" >
 
-    <my-skillcard  ng-repeat="x in results" candidateid="x.candidateid"  flex-xs="100" flex-gt-xs="100">
+    <my-skillcard  candidateid="x.candidateid"  flex-xs="100" flex-gt-xs="100">
         <md-menu>
             <md-button aria-label="open" class="md-icon-button" ng-click=openMenu($mdOpenMenu,$event)>
                 <md-icon class="material-icons">more horiz</md-icon>
