--- a/webapp/home/templates/appbar.html
+++ b/webapp/home/templates/appbar.html
@@ -7,22 +7,15 @@
                 </md-button>
                 <h2>
 
-                  <span>SAMARTH-SAHAYAK</span>
+                  <span>Samarth-Coordinator</span>
               </h2>
           </div>
-          <!-- <span flex></span> -->
-          <!-- <div class="toolbar-separator"></div> -->
+
           <div flex-sm="70">
-            <!-- <md-button class="md-raised" ui-sref="loginView">Sign-in</md-button> -->
+
             <md-menu>
                 <md-button aria-label="LanguageSelector" class="md-icon-button" ng-click="$mdOpenMenu($event)">
-                    <md-icon class="material-icons">flag</md-ico
-                      <span>SAMARTH-COORDINATOR</span>
-                  </h2>
-              </div>
-              <div>
-                <md-button class="md-icon-button md-ink-ripple" ui-sref="home" ng-show="homebtn">
-                    <md-icon class="material-icons">home</md-icon>
+                    <md-icon class="material-icons">flag</md-icon>
                 </md-button>
                 <md-menu-content width="2">
                     <md-menu-item>
@@ -58,53 +51,48 @@
                 </md-content>
                 <md-content layout='column'>
                     <md-list>
+                        <md-list-item ui-sref="{{x.state}}" ng-repeat="x in usersidenavdata.functionality track by $index">
+                            <md-item-content layout="row" layout-align="start center">
+                                <div>
+                                    <md-icon class="material-icons">{{x.icon}}</md-icon>
+                                    <span>{{x.func}}</span>
+                                </div>
+                            </md-list-item>
 
-                        <md-list-item ng-repeat="x in usersidenavdata.functionality track by $index">
-                            <!-- ng-repeat="x in response track by $index" -->
-                            <md-button ui-sref="{{x.state}}">{{x.func}}</md-button>
-                            <!-- <a ui-sref="{{x.state}}"> {{x.func}}</a> -->
-                            
-                            <md-list-item ui-sref="{{x.state}}" ng-repeat="x in usersidenavdata.functionality track by $index">
+                            <md-divider></md-divider>
+                            <md-subheader class="md-no-sticky">Management</md-subheader>
+                            <md-list-item ui-sref="#">
                                 <md-item-content layout="row" layout-align="start center">
                                     <div>
-                                        <md-icon class="material-icons">{{x.icon}}</md-icon>
-                                        <span>{{x.func}}</span>
+                                        <md-icon class="material-icons">settings</md-icon>
+                                        <span style="cursor:pointer;">Settings</span>
                                     </div>
-                                </md-list-item>
-                                <md-divider></md-divider>
-                                <md-subheader class="md-no-sticky">Management</md-subheader>
-                                <md-list-item ui-sref="#">
-                                    <md-item-content layout="row" layout-align="start center">
-                                        <div>
-                                            <md-icon class="material-icons">settings</md-icon>
-                                            <span style="cursor:pointer;">Settings</span>
-                                        </div>
-                                    </md-item-content>
-                                </md-list-item>
-                                <md-list-item ui-sref="#">
-                                    <md-item-content layout="row" layout-align="start center">
-                                        <div>
-                                            <md-icon class="material-icons">dns</md-icon>
-                                            <span style="cursor:pointer;">Extensions</span>
-                                        </div>
-                                    </md-item-content>
-                                </md-list-item>
-                                <md-list-item ui-sref="signout">
-                                    <md-item-content layout="row" layout-align="start center">
-                                        <div>
-                                            <!-- <md-button ui-sref="signout"> -->
-                                            <md-icon class="material-icons">exit_to_app</md-icon>
-                                            <span>Logout</span>
-                                        </div>
-                                    </md-item-content>
-                                    <!-- </md-button> -->
-                                </md-list-item>
-                            </md-list>
-                        </md-content>
-                    </div>
-                </md-content>
-            </md-sidenav>
-            <md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right">
-                <md-content ng-click="toggleRight()"></md-content>
-            </md-sidenav>
-        </div>
+                                </md-item-content>
+                            </md-list-item>
+                            <md-list-item ui-sref="#">
+                                <md-item-content layout="row" layout-align="start center">
+                                    <div>
+                                        <md-icon class="material-icons">dns</md-icon>
+                                        <span style="cursor:pointer;">Extensions</span>
+                                    </div>
+                                </md-item-content>
+                            </md-list-item>
+                            <md-list-item ui-sref="signout">
+                                <md-item-content layout="row" layout-align="start center">
+                                    <div>
+                                        <!-- <md-button ui-sref="signout"> -->
+                                        <md-icon class="material-icons">exit_to_app</md-icon>
+                                        <span>Logout</span>
+                                    </div>
+                                </md-item-content>
+                                <!-- </md-button> -->
+                            </md-list-item>
+                        </md-list>
+                    </md-content>
+                </div>
+            </md-content>
+        </md-sidenav>
+        <md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right">
+            <md-content ng-click="toggleRight()"></md-content>
+        </md-sidenav>
+    </div>
