--- a/webapp/home/templates/appbar.html
+++ b/webapp/home/templates/appbar.html
@@ -6,38 +6,16 @@
                     <md-icon class="material-icons">menu</md-icon>
                 </md-button>
                 <h2>
-
-                  <span>Samarth-Coordinator</span>
-              </h2>
-          </div>
-
-          <div flex-sm="70">
-
-            <md-menu>
-                <md-button aria-label="LanguageSelector" class="md-icon-button" ng-click="$mdOpenMenu($event)">
-                    <md-icon class="material-icons">flag</md-icon>
+          <span>SAMARTH-COORDINATOR</span>
+        </h2>
+            </div>
+            <div>
+                <md-button class="md-icon-button md-ink-ripple" ui-sref="home" ng-show="homebtn">
+                    <md-icon class="material-icons">home</md-icon>
                 </md-button>
-                <md-menu-content width="2">
-                    <md-menu-item>
-                        <md-button ng-click="func()" ng-disabled="true">
-                            <!-- <md-icon md-svg-icon="call:dialpad" md-menu-align-target></md-icon> -->
-                            English
-                        </md-button>
-                    </md-menu-item>
-                    <md-menu-item>
-                        <md-button ng-click="checkVoicemail()">
-                            <!-- <md-icon md-svg-icon="call:voicemail"></md-icon> -->
-                            Hindi
-                        </md-button>
-                    </md-menu-item>
-                </md-menu-content>
-            </md-menu>
-            <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleRight()">
-                <md-icon>notifications_active</md-icon>
-            </md-button>
+            </div>
         </div>
-    </div>
-</md-toolbar>
+    </md-toolbar>
 </div>
 <div>
     <md-sidenav class="md-sidenav-left md-whiteframe-4dp" md-component-id="left">
@@ -57,42 +35,41 @@
                                     <md-icon class="material-icons">{{x.icon}}</md-icon>
                                     <span>{{x.func}}</span>
                                 </div>
-                            </md-list-item>
-
-                            <md-divider></md-divider>
-                            <md-subheader class="md-no-sticky">Management</md-subheader>
-                            <md-list-item ui-sref="#">
-                                <md-item-content layout="row" layout-align="start center">
-                                    <div>
-                                        <md-icon class="material-icons">settings</md-icon>
-                                        <span style="cursor:pointer;">Settings</span>
-                                    </div>
-                                </md-item-content>
-                            </md-list-item>
-                            <md-list-item ui-sref="#">
-                                <md-item-content layout="row" layout-align="start center">
-                                    <div>
-                                        <md-icon class="material-icons">dns</md-icon>
-                                        <span style="cursor:pointer;">Extensions</span>
-                                    </div>
-                                </md-item-content>
-                            </md-list-item>
-                            <md-list-item ui-sref="signout">
-                                <md-item-content layout="row" layout-align="start center">
-                                    <div>
-                                        <!-- <md-button ui-sref="signout"> -->
-                                        <md-icon class="material-icons">exit_to_app</md-icon>
-                                        <span>Logout</span>
-                                    </div>
-                                </md-item-content>
-                                <!-- </md-button> -->
-                            </md-list-item>
-                        </md-list>
-                    </md-content>
-                </div>
-            </md-content>
-        </md-sidenav>
-        <md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right">
-            <md-content ng-click="toggleRight()"></md-content>
-        </md-sidenav>
-    </div>
+                        </md-list-item>
+                        <md-divider></md-divider>
+                        <md-subheader class="md-no-sticky">Management</md-subheader>
+                        <md-list-item ui-sref="#">
+                            <md-item-content layout="row" layout-align="start center">
+                                <div>
+                                    <md-icon class="material-icons">settings</md-icon>
+                                    <span style="cursor:pointer;">Settings</span>
+                                </div>
+                            </md-item-content>
+                        </md-list-item>
+                        <md-list-item ui-sref="#">
+                            <md-item-content layout="row" layout-align="start center">
+                                <div>
+                                    <md-icon class="material-icons">dns</md-icon>
+                                    <span style="cursor:pointer;">Extensions</span>
+                                </div>
+                            </md-item-content>
+                        </md-list-item>
+                        <md-list-item ui-sref="signout">
+                            <md-item-content layout="row" layout-align="start center">
+                                <div>
+                                    <!-- <md-button ui-sref="signout"> -->
+                                    <md-icon class="material-icons">exit_to_app</md-icon>
+                                    <span>Logout</span>
+                                </div>
+                            </md-item-content>
+                            <!-- </md-button> -->
+                        </md-list-item>
+                    </md-list>
+                </md-content>
+            </div>
+        </md-content>
+    </md-sidenav>
+    <md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right">
+        <md-content ng-click="toggleRight()"></md-content>
+    </md-sidenav>
+</div>
