integrated complete profile with candidate listing

--- a/webapp/completeprofile/templates/completeprofile.html
+++ b/webapp/completeprofile/templates/completeprofile.html
@@ -2,9 +2,9 @@
 	<!-- <my-skillcard candidateid='id'></my-skillcard> -->
 
 	<div layout="row">
-    <md-button class="md-raised md-primary" ui-sref="back">Back</md-button>
-    <span flex></span>
-    <md-button class="md-raised md-primary">VerifyProfile</md-button>
+        <md-button class="md-raised md-primary" ui-sref="back">Back</md-button>
+        <span flex></span>
+        <md-button class="md-raised md-primary" ng-click="showdialog(ev)">VerifyProfile</md-button>
     </div>
     <my-personalinfocard candidateid="id"></my-personalinfocard>
     <mysection-skill-card candidateid="id"></mysection-skill-card>
