--- a/webapp/home/templates/appbar.html
+++ b/webapp/home/templates/appbar.html
@@ -2,20 +2,20 @@
     <md-toolbar class="md-whiteframe-15dp md-hue-2">
         <div class="md-toolbar-tools" layout="row" layout-align="start center">
             <div layout="row" layout-align="start center" flex flex-sm="30">
-                <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleLeft()" ng-show="showmenu">
+                <md-button class="md-icon-button" aria-label="Settings" ng-click="toggleLeft()" ng-show="showmenu = true">
                     <md-icon class="material-icons">menu</md-icon>
                 </md-button>
                 <h2>
-          <span>SAMARTH-COORDINATOR</span>
-        </h2>
-            </div>
-            <div>
-                <md-button class="md-icon-button md-ink-ripple" ui-sref="home" ng-show="homebtn">
-                    <md-icon class="material-icons">home</md-icon>
-                </md-button>
-            </div>
+                  <span>SAMARTH-COORDINATOR</span>
+              </h2>
+          </div>
+          <div>
+            <md-button class="md-icon-button md-ink-ripple" ui-sref="home" ng-show="homebtn">
+                <md-icon class="material-icons">home</md-icon>
+            </md-button>
         </div>
-    </md-toolbar>
+    </div>
+</md-toolbar>
 </div>
 <div>
     <md-sidenav class="md-sidenav-left md-whiteframe-4dp" md-component-id="left">
@@ -35,41 +35,41 @@
                                     <md-icon class="material-icons">{{x.icon}}</md-icon>
                                     <span>{{x.func}}</span>
                                 </div>
-                        </md-list-item>
-                        <md-divider></md-divider>
-                        <md-subheader class="md-no-sticky">Management</md-subheader>
-                        <md-list-item ui-sref="#">
-                            <md-item-content layout="row" layout-align="start center">
-                                <div>
-                                    <md-icon class="material-icons">settings</md-icon>
-                                    <span style="cursor:pointer;">Settings</span>
-                                </div>
-                            </md-item-content>
-                        </md-list-item>
-                        <md-list-item ui-sref="#">
-                            <md-item-content layout="row" layout-align="start center">
-                                <div>
-                                    <md-icon class="material-icons">dns</md-icon>
-                                    <span style="cursor:pointer;">Extensions</span>
-                                </div>
-                            </md-item-content>
-                        </md-list-item>
-                        <md-list-item ui-sref="signout">
-                            <md-item-content layout="row" layout-align="start center">
-                                <div>
-                                    <!-- <md-button ui-sref="signout"> -->
-                                    <md-icon class="material-icons">exit_to_app</md-icon>
-                                    <span>Logout</span>
-                                </div>
-                            </md-item-content>
-                            <!-- </md-button> -->
-                        </md-list-item>
-                    </md-list>
-                </md-content>
-            </div>
-        </md-content>
-    </md-sidenav>
-    <md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right">
-        <md-content ng-click="toggleRight()"></md-content>
-    </md-sidenav>
-</div>
+                            </md-list-item>
+                            <md-divider></md-divider>
+                            <md-subheader class="md-no-sticky">Management</md-subheader>
+                            <md-list-item ui-sref="#">
+                                <md-item-content layout="row" layout-align="start center">
+                                    <div>
+                                        <md-icon class="material-icons">settings</md-icon>
+                                        <span style="cursor:pointer;">Settings</span>
+                                    </div>
+                                </md-item-content>
+                            </md-list-item>
+                            <md-list-item ui-sref="#">
+                                <md-item-content layout="row" layout-align="start center">
+                                    <div>
+                                        <md-icon class="material-icons">dns</md-icon>
+                                        <span style="cursor:pointer;">Extensions</span>
+                                    </div>
+                                </md-item-content>
+                            </md-list-item>
+                            <md-list-item ui-sref="signout">
+                                <md-item-content layout="row" layout-align="start center">
+                                    <div>
+                                        <!-- <md-button ui-sref="signout"> -->
+                                        <md-icon class="material-icons">exit_to_app</md-icon>
+                                        <span>Logout</span>
+                                    </div>
+                                </md-item-content>
+                                <!-- </md-button> -->
+                            </md-list-item>
+                        </md-list>
+                    </md-content>
+                </div>
+            </md-content>
+        </md-sidenav>
+        <md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right">
+            <md-content ng-click="toggleRight()"></md-content>
+        </md-sidenav>
+    </div>
