--- a/webapp/home/templates/footer.html
+++ b/webapp/home/templates/footer.html
@@ -1,7 +1,6 @@
-<footer class='appfooter'>
-	<div layout layout-align="center center">
-		
-		@Copyright samarth-sahayak
-		
-	</div>
+<!-- <footer class='appfooter'>
+    <div layout layout-align="center center">
+        @Copyright samarth-sahayak
+    </div>
 </footer>
+ -->
