--- a/webapp/jobprofile/templates/jobprofilepost.html
+++ b/webapp/jobprofile/templates/jobprofilepost.html
@@ -15,7 +15,7 @@
                     <div ng-message="minlength">Your entry is not long enough to search.</div>
                 </div>
             </md-autocomplete>
-            <div ng-hide="editDisabled"><a href="" ui-sref="registerEmployer">Not Register? Click here to register.</a></div>
+            <div ng-hide="editDisabled"><a href="" ui-sref="index.registerEmployer">Not Register? Click here to register.</a></div>
             <!-- <md-input-container class="md-block" flex>
     <label>Company Name{{jobPosting.companyName.$error}}</label>
     <input required name="companyName" ng-model="job.company.companyName" ng-disabled="editDisabled" />
