--- a/webapp/jobprofile/templates/jobprofileview.html
+++ b/webapp/jobprofile/templates/jobprofileview.html
@@ -123,7 +123,7 @@
             </div>
         </md-card-content>
         <md-card-actions layout="row" layout-align="end center">
-            <md-button class="md-raised md-warn" ui-sref="editJob({jobID:job.jobID,employerID:job.employer.employerID})">Edit</md-button>
+            <md-button class="md-raised md-warn" ui-sref="index.editJob({jobID:job.jobID,employerID:job.employer.employerID})">Edit</md-button>
         </md-card-actions>
     </md-card>
 </div>
