--- a/webapp/jobsearch/templates/jobsearchhome.html
+++ b/webapp/jobsearch/templates/jobsearchhome.html
@@ -2,7 +2,7 @@
     <md-input-container>
         <input type="text" name="searchBox" ng-model="searchText" class="md-block">
     </md-input-container>
-    <md-button class="md-raised" ui-sref="searchjob.results" ng-click="searchJob()">search</md-button>
+    <md-button class="md-raised" ui-sref="index.searchjob.results" ng-click="searchJob()">search</md-button>
 </div>
 <span>{{message}}</span>
 <div>
