--- a/webapp/jobsearch/templates/jobsearchresult.html
+++ b/webapp/jobsearch/templates/jobsearchresult.html
@@ -7,7 +7,7 @@
             <md-menu-content width="4">
                 </menu-content>
                 <md-menu-item>
-                    <md-button ui-sref="jobProfileView({jobID:'{{job.jobID}}',employerID:'{{job.employer.employerID}}'})">
+                    <md-button ui-sref="index.jobProfileView({jobID:'{{job.jobID}}',employerID:'{{job.employer.employerID}}'})">
                         View profile
                     </md-button>
                 </md-menu-item>
