--- a/webapp/completeprofile/templates/newtemplate.html
+++ b/webapp/completeprofile/templates/newtemplate.html
@@ -1,6 +1,7 @@
 <sm-verification-rubric name="'Candidate'" profiletype="'Developer'" outcome="b">
 </sm-verification-rubric>
 <span flex></span>
-<!-- <p>{{listid}}</p> -->
+<p>{{listid}}</p>
+<span flex></span>
 <md-button ng-click=answer(b,id)>Close
 </md-button>
