--- a/webapp/candidatesearch/templates/candidatesearchhome.html
+++ b/webapp/candidatesearch/templates/candidatesearchhome.html
@@ -1,7 +1,7 @@
 <div layout="row" layout-align="center center">
-    <md-input-container>
-        <input type="text" name="searchBox" class="md-block">
-    </md-input-container>
-    <md-button class="md-raised" ui-sref="index.candidatessearch.results" ng-click="search()">search</md-button>
+	<md-input-container>
+		<input type="text" name="searchBox" class="md-block">
+	</md-input-container>
+	<md-button class="md-raised" ui-sref="index.candidatessearch.results" ng-click="search()" aria-label="search">search</md-button>
 </div>
 <div ui-view="results"></div>
