--- a/webapp/candidatesearch/templates/candidatesearchresults.html
+++ b/webapp/candidatesearch/templates/candidatesearchresults.html
@@ -1,5 +1,5 @@
-<div ng-repeat="x in results">
-    <my-skillcard candidateid="x.candidateid" flex-xs="100" flex-gt-xs="100">
+<div ng-repeat="x in results" flex layout="row" layout-align="end end">
+    <my-skillcard flex-xs="100" flex-gt-xs="100" candidateid="x.candidateid" flex-xs="100" flex-gt-xs="100">
         <badges>
             <verification-badge candidateid="x.candidateid">
             </verification-badge>
