--- a/webapp/candidateregistration/templates/candidateregistration.html
+++ b/webapp/candidateregistration/templates/candidateregistration.html
@@ -102,6 +102,9 @@
 				<md-button type="submit" class="md-primary md-raised">
 					Register
 				</md-button>
+				<p ng-model="signUpStatus" style="color:blue">{{signUpStatus}}</p>
+				<p ng-model="signUpStatus" style="color:red">{{error}}</p>
+
 			</form>
 		</md-content>
 	</div>
